# spandoc

./: CHANGELOG.md  Cargo.toml  README.md
examples/: happy.rs  scoped.rs
spandoc-attribute/: Cargo.toml
spandoc-attribute/src/: fake.rs  lib.rs
src/: lib.rs
tests/: compile_tests.rs  happy.rs  spandoc_is_sync.rs
tests/compile/: empty_blocks.rs  with_invalid_span_args.rs  with_invalid_span_args.stderr  with_multi_await.rs  with_multi_await.stderr  with_single_await.rs  with_valid_span_args.rs
