[package]
name = "spandoc"
version = "0.1.3"
authors = [ "Jane Lusby <jlusby@yaah.dev>" ]
repository = "https://github.com/yaahc/spandoc"
homepage = "https://github.com/yaahc/spandoc"
documentation = "https://docs.rs/spandoc"
description = """
Procedural macro attribute for converting doc comments into tracing spans
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "tracing", "macro", "instrument", "log"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.33", features = ["full", "extra-traits", "fold"] }
quote = "1.0.7"
proc-macro2 = "1.0.18"
matches = "0.1.8"
tracing = "0.1.15"
tracing-futures = "0.2.4"

[dev-dependencies]
tracing-error = "0.1.2"
tracing-subscriber = { features = ["registry", "fmt"], version = "0.2.6" }
trybuild = "1.0.30"
