[package]
name = "spandoc"
version = "0.2.0"
authors = [ "Jane Lusby <jlusby@yaah.dev>" ]
repository = "https://github.com/yaahc/spandoc"
homepage = "https://github.com/yaahc/spandoc"
documentation = "https://docs.rs/spandoc"
description = """
Procedural macro attribute for converting doc comments into tracing spans
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "tracing", "macro", "instrument", "log"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
tracing = "0.1.15"
tracing-futures = "0.2.4"
spandoc-attribute = { path = "./spandoc-attribute" }

[dev-dependencies]
tracing-error = "0.1.2"
tracing-subscriber = { features = ["registry", "fmt"], version = "0.2.6" }
trybuild = "1.0.30"
