[package]
name = "spandoc-attribute"
version = "0.1.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
repository = "https://github.com/yaahc/spandoc"
homepage = "https://github.com/yaahc/spandoc"
documentation = "https://docs.rs/spandoc-attribute"
description = """
Procedural macro attribute for converting doc comments into tracing spans
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "tracing", "macro", "instrument", "log"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true


[dependencies]
syn = { version = "1.0.33", features = ["full", "extra-traits", "fold"] }
quote = "1.0.7"
proc-macro2 = "1.0.18"
