[package]
name = "spandoc-attribute"
version = "0.1.2-alpha.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
repository = "https://github.com/yaahc/spandoc"
homepage = "https://github.com/yaahc/spandoc"
documentation = "https://docs.rs/spandoc-attribute"
description = """
Procedural macro attribute for converting doc comments into tracing spans
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "tracing", "macro", "instrument", "log"]
license = "MIT OR Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true


[dependencies]
syn = { version = "1.0.33", features = ["full", "extra-traits", "fold"] }
quote = "1.0.7"
proc-macro2 = "1.0.18"

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "spandoc-attribute = .*"
replace = "spandoc-attribute = { version = \"={{version}}\", path = \"./spandoc-attribute\" }"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../Cargo.toml"
search = "#!\\[doc\\(html_root_url.*"
replace = "#![doc(html_root_url = \"https://docs.rs/{{crate_name}}/{{version}}\")]"
exactly = 1
